--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "mews/captcha": "^3.2",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+      "ext-curl": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
