--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "ext-curl": "*",
         "ext-json": "*",
         "ext-libxml": "*",
         "ext-simplexml": "*",
@@ -17,10 +18,10 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^8.12",
+        "laravel/octane": "^1.0",
         "laravel/tinker": "^2.5",
         "mews/captcha": "^3.2",
-        "predis/predis": "^1.1",
-      "ext-curl": "*"
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
