--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,6 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 ADMIN_HTTPS=
+
+OCTANE_SERVER=swoole
+OCTANE_HTTPS=false
